# xyz-snake-game

./: .clang-format  .gitignore  CMakeLists.txt  CODE_STYLE.md  LICENSE  README.md  settings.json
.github/workflows/: build.yml
resources/: prototype.aseprite  resource_details.txt
scripts/: format_code.bat  format_code.sh
scripts/analyze_resources/: CMakeLists.txt  analyze_resources.cpp  run_analysis.bat
src/: Game.cpp  Game.hpp  Screen.cpp  Screen.hpp  ScreenState.cpp  ScreenState.hpp  Snake.cpp  Snake.hpp  SnakeSprite.cpp  SnakeSprite.hpp  Wall.cpp  Wall.hpp  WallManager.cpp  WallManager.hpp  main.cpp
src/config/: AudioConstants.hpp
src/screens/: Difficulty.cpp  Difficulty.hpp  DifficultyScreen.cpp  DifficultyScreen.hpp  Exit.cpp  Exit.hpp  GameScreen.cpp  GameScreen.hpp  HighScores.cpp  HighScores.hpp  MainMenu.cpp  MainMenu.hpp  Pause.cpp  PauseScreen.cpp  PauseScreen.hpp  Settings.cpp  Settings.hpp
src/utils/: CountdownTimer.cpp  CountdownTimer.hpp  DebugUI.cpp  DebugUI.hpp  Digits.cpp  Digits.hpp  EventLogger.cpp  EventLogger.hpp  FantomApple.cpp  FantomApple.hpp  FontInitializer.cpp  FontInitializer.hpp  GameGrid.cpp  GameGrid.hpp  GameItem.cpp  GameItem.hpp  GameItemManager.cpp  GameItemManager.hpp  GameUI.cpp  GameUI.hpp  GreenApple.cpp  GreenApple.hpp  MenuSoundManager.cpp  MenuSoundManager.hpp  PausableClock.cpp  PausableClock.hpp  RedApple.cpp  RedApple.hpp  ResourceLoader.cpp  ResourceLoader.hpp  ResourceManager.cpp  ResourceManager.hpp  ScalingUtils.cpp  ScalingUtils.hpp  SettingReader.cpp  SettingReader.hpp  SettingStorage.cpp  SettingStorage.hpp  TimerManager.cpp  TimerManager.hpp  (+6 more)
src/utils/difficulty/: DifficultyManager.cpp  DifficultyManager.hpp  DifficultySettings.cpp  DifficultySettings.hpp
